# theadvenjohub

./: .gitignore  .vercelignore  LICENSE  README.md  drizzle.config.ts  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  updater.json
app/: layout.tsx  page.tsx
app/about/: page.tsx
app/api/dexscreener/: route.ts
app/api/games/: route.ts
app/api/image-proxy/: route.ts
app/api/new-tokens/: route.ts
app/api/ping-db/: route.ts
app/api/token-by-ca/: route.ts
app/auth/desktop/: page.tsx
app/forum/: page.tsx
app/game/[slug]/: page.tsx
app/games/[gameId]/: layout.tsx  page.tsx
app/marketplace/: page.tsx
app/privacy/: page.tsx
app/profile/: page.tsx
app/support/: page.tsx
game-server/: package-lock.json  package.json  server.js
public/: site.webmanifest
public/models/: bush2.glb  character.glb  column.glb  crystal.glb  rock.glb  tree.glb
scripts/: copy-release.js  keep-server-alive.js  upload-release.mjs  upload-to-blob.js
src-tauri/src/: sync.rs
src/core/: init.ts  polyfills.ts
src/games/: registry.ts
tanjo-client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tanjo-client/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
tanjo-client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tanjo-client/src-tauri/capabilities/: default.json
tanjo-client/src-tauri/icons/: icon.icns
tanjo-client/src-tauri/src/: main.rs
tanjo-client/src-tauri/src/commands/: auth.rs  crypto.rs  games.rs  mod.rs  system.rs  updater.rs
(+384 files in other folders)
