# src-tauri/Cargo.toml
[package]
name = "tanjo-client"
version = "0.1.4"
description = "TANJO Game Store Client"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-deep-link = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-single-instance = { version = "2.4", features = ["deep-link"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] } 

reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

anyhow = "1.0"
dirs = "5.0"
hostname = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

sha2 = "0.10"
hex = "0.4"
ring = "0.17"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[profile.dev]
opt-level = 1
debug = true
